fixing word-wrap syntax in stylesheet

--- a/public/style.css
+++ b/public/style.css
@@ -83,7 +83,7 @@ footer p {
     font-size: 1.1rem;
     margin-bottom: 10px;
     white-space: pre-wrap;
-    word-wrap: break-word;
+    word-wrap: break-word
 }
 
 .note button {
